Harmonisation IHM + bottom sheet view

--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -57,8 +57,14 @@
         
         <!-- List Player -->
         <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.player' | translate }}</h5></div>
+        <div>
+            <form class="forms forms-inline input-field ">
+                <input type="text" class="input-big width-50" id="query" ng-model="query">
+                <label for="query">Filter</label>
+            </form>
+        </div>
         <ul class="collection">
-            <li class="collection-item avatar" ng-repeat="player in effective">
+            <li class="collection-item avatar" ng-repeat="player in effective | filter:query">
                 <a href="#/private/viewPlayer/{{player._id}}" class="red-text text-lighten-1 tooltipped" 
                        data-position="right" data-delay="30" data-tooltip="{{'mainEffective.buttons.viewPlayer' | translate }}">
                     <img src="assets/images/user.png" alt="" class="circle responsive-img">
