--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -10,8 +10,9 @@
                 <div class="card-content center-align">
                     <div class="row">
                         <div class="col m4 s12">
-                            <div class="card-title red-text text-lighten-1 truncate"><h4>{{player.firstname}} {{player.name}}</h4></div>
+                            <div class="card-title red-text text-lighten-1"><h4>{{player.firstname}} {{player.name}}</h4></div>
                             <img class="circle responsive-img" src="assets/images/user.png">
+                            <div class="blue-grey-text text-darken-2"><h3>{{player.status.squadnumber}}</h3></div>
                         </div>
                         <div class="col m1 hide-on-small-only">&nbsp;</div>
                         <div class="col m3 s12">
@@ -22,8 +23,7 @@
                         <div class="col m1 hide-on-small-only">&nbsp;</div>
                         <div class="col m3 s12">
                             <div class="row blue-grey-text text-darken-2 left-align"><h5>{{'playerLabels.playerCaracterSection' | translate }}</h5></div>
-                            <div class="row"><div class="divider red lighten-1"></div></div>
-                            <div class="row blue-grey-text text-darken-2 left-align">{{'playerLabels.playerSquadNumber' | translate }} : {{player.status.squadnumber}}</div>
+                            <div class="row"><div class="divider red lighten-1"></div></div>                            
                             <div class="row blue-grey-text text-darken-2 left-align">{{'playerLabels.playerWeight' | translate }} : {{player.status.weight}}</div>
                             <div class="row blue-grey-text text-darken-2 left-align">{{'playerLabels.playerHeight' | translate }} : {{player.status.height}}</div>
                             <div class="row blue-grey-text text-darken-2 left-align">{{'playerLabels.playerLaterality' | translate }} : {{player.status.laterality}}</div>
@@ -37,19 +37,19 @@
                     <div class="col m4 s12 center-align">
                         <a href="">
                             <i class="material-icons red-text text-lighten-1 small tooltipped" ng-click="doTheBack()" 
-                               data-position="down" data-delay="20" data-tooltip="{{'viewPlayer.buttons.returnViewPlayer' | translate }}">undo</i>
+                               data-position="top" data-delay="20" data-tooltip="{{'viewPlayer.buttons.returnViewPlayer' | translate }}">undo</i>
                         </a>
                     </div>
                     <div class="col m4 s12 center-align">
                         <a href="#/private/updatePlayer/{{player._id}}">
                             <i class="red-text text-lighten-1 small material-icons tooltipped" 
-                            data-position="down" data-delay="20" data-tooltip="{{'viewPlayer.buttons.updatePlayer' | translate }}">mode_edit</i>
+                            data-position="top" data-delay="20" data-tooltip="{{'viewPlayer.buttons.updatePlayer' | translate }}">mode_edit</i>
                         </a>
                     </div>
                     <div class="col m4 s12 center-align">
                         <a href="#/private/statPlayer/{{player._id}}">
                             <i class="red-text text-lighten-1 small fa fa-bar-chart tooltipped" 
-                            data-position="down" data-delay="20" data-tooltip="{{'viewPlayer.buttons.viewStatsPlayer' | translate }}"></i>
+                            data-position="top" data-delay="20" data-tooltip="{{'viewPlayer.buttons.viewStatsPlayer' | translate }}"></i>
                         </a>
                     </div>
                 </div>
@@ -58,16 +58,10 @@
                     <div class="col m12 s12"><h5>{{'playerLabels.playerContactSection' | translate }}</h5></div>
                 </div>
                 <div class="row m12 s12 center-align">
-                    <div class="col m3 s6"><i class="material-icons">mail</i></div>
-                    <div class="col m3 s6"><i class="material-icons">phone</i></div>
-                    <div class="col m3 s6"><i class="material-icons">smartphone</i></div>
-                    <div class="col m3 s6"><i class="material-icons">home</i></div>
-                </div>
-                <div class="row m12 s12 center-align">
-                    <div class="col m3 s6">{{player.contact.email}}</div>
-                    <div class="col m3 s6">{{player.contact.home}}</div>
-                    <div class="col m3 s6">{{player.contact.cellphone}}</div>
-                    <div class="col m3 s6">{{player.address.formatedAddress}}</div>
+                    <div class="col m3 s12"><i class="material-icons">mail</i> <br/> {{player.contact.email}}</div>
+                    <div class="col m3 s12"><i class="material-icons">phone</i> <br/> {{player.contact.home}}</div>
+                    <div class="col m3 s12"><i class="material-icons">smartphone</i> <br/> {{player.contact.cellphone}}</div>
+                    <div class="col m3 s12"><i class="material-icons">home</i> <br/> {{player.address.formatedAddress}}</div>
                 </div>
             </div>
         </div>
