--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -11,7 +11,7 @@
                     <div class="row">
                         <div class="col m4 s12">
                             <div class="card-title red-text text-lighten-1"><h4>{{player.firstname}} {{player.name}}</h4></div>
-                            <img class="circle responsive-img" src="assets/images/user.png">
+                            <avatar person="player" width="'200px'"></avatar>
                             <div class="blue-grey-text text-darken-2"><h3>{{player.status.squadnumber}}</h3></div>
                         </div>
                         <div class="col m1 hide-on-small-only">&nbsp;</div>
